# climbex

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_math_example.sh
examples/: main.cpp
res/: Fractal.shader  Fragment1.shader  Fragment2.shader  Vertex.shader  Vertex1.shader  Vertex2.shader
src/: Log.cpp  Log.h  Program.cpp  Program.h  RenderObject.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  main.cpp
src/events/: Dispatch.h  Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/math/: example.cpp  matx.h  matx.hpp  ppmath.hpp  vec.h  vec.hpp
src/renderer/: Program.cpp  Program.h  RenderObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
